--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         ipv4_address: 172.16.238.10
     ports:
       - "8080:8080"
+    labels:
+      - "com.scalyr.config.log.parser=accessLog"
     depends_on:
       - "scalyr"
   cve-neo:
@@ -43,7 +45,7 @@ services:
     environment:
       - POC_ADDR=172.16.238.11
       - POC_PORT=80
-      - LISTENER_ADDR=10.10.10.31
+      - LISTENER_ADDR=10.0.0.22
       - LISTENER_PORT=9001
     networks:
       cve-net:
